--- a/design/templates/OpenGame/affilates.tpl.html
+++ b/design/templates/OpenGame/affilates.tpl.html
@@ -7,6 +7,9 @@
   </th></tr>
   <tr><th>
     <h2>{L_aff_link}</h2>
+    {L_aff_link_direct}<br>
+    <input name="htmlbbcode" type="text" id="htmlbbcode" value="{D_SN_ROOT_VIRTUAL_PARENT}login.php?id_ref={user_id}#tab_register" size="80" /><br /><br />
+
     {L_aff_link_bb}<br>
     <input name="htmlbbcode" type="text" id="htmlbbcode" value="[url={D_SN_ROOT_VIRTUAL_PARENT}login.php?id_ref={user_id}#tab_register]{C_game_name}[/url]" size="80" /><br /><br />
 
