--- a/design/templates/OpenGame/topnav.tpl.html
+++ b/design/templates/OpenGame/topnav.tpl.html
@@ -184,6 +184,18 @@
     </tr>
   </table>
   <!-- ENDIF -->
+
+  <!-- IF .note -->
+  <table width=519 id="note_table" align="center">
+      <tr>
+      <th colspan=2 class="c_c">
+        <a class="link" href="notes.php">{L_sys_notes}</a>
+        <!--<img class="fr pointer" onclick="jQuery.post('announce.php?only_hide_news=1');jQuery('#fresh_news_table').css('display', 'none');" src="design/images/r1.png" alt="{L_sys_close}" title="{L_sys_close}" />-->
+      </th>
+    </tr>
+    <!-- INCLUDE note_list -->
+  </table>
+  <!-- ENDIF -->
 <!-- </div></td></tr> -->
 
 <script type="text/javascript"><!--
