--- a/design/templates/OpenGame/admin/adm_overview.tpl.html
+++ b/design/templates/OpenGame/admin/adm_overview.tpl.html
@@ -7,7 +7,7 @@
     <th><a href="admin/overview.php?cmd=sort&type=ally_name">{L_adm_ov_ally}</a></th>
     <th><a href="admin/overview.php?cmd=sort&type=total_points">{L_adm_ov_point}</a></th>
     <th><a href="admin/overview.php?cmd=sort&type=onlinetime">{L_adm_ov_activ}</a></th>
-    <th><img src="design/images/mail.gif" alt="{L_adm_ov_altpm}" title="{L_adm_ov_wrtpm}" border="0"></th>
+    <th><img src="design/images/icon_mail.gif" alt="{L_adm_ov_altpm}" title="{L_adm_ov_wrtpm}" border="0"></th>
   </tr>
 
   <!-- BEGIN user -->
@@ -17,7 +17,7 @@
     <td>{user.ALLY}</td>
     <td class="c_r">{user.STAT_POINTS}</td>
     <td class="c_r">{user.ACTIVITY}</td>
-    <td><a href="messages.php?mode=write&id={user.ID}"><img src="design/images/mail.gif" alt="{L_adm_ov_altpm}" title="{L_adm_ov_wrtpm}" border="0"></a></td>
+    <td><a href="messages.php?mode=write&id={user.ID}"><img src="design/images/icon_mail.gif" alt="{L_adm_ov_altpm}" title="{L_adm_ov_wrtpm}" border="0"></a></td>
   </tr>
   <!-- END user -->
 
