--- a/design/templates/OpenGame/buddy.tpl.html
+++ b/design/templates/OpenGame/buddy.tpl.html
@@ -7,7 +7,7 @@
     <th class="c_l">{L_sys_capital}</th>
     <th class="c_l" width="300px">{L_buddy_status}</th>
     <th class="c_l" width="55px">
-      <img src="{dpath}img/m.gif" alt="{L_sys_writeMessage}" title="{L_sys_writeMessage}">
+      <img src="design/images/icon_mail.gif" alt="{L_sys_writeMessage}" title="{L_sys_writeMessage}">
       <img src="design/images/r1.png" alt="{L_sys_delete}" title="{L_sys_delete}" border="0">
       <img src="design/images/r4.png" alt="{L_buddy_request_accept}" title="{L_buddy_request_accept}" border="0">
     </th>
@@ -62,7 +62,7 @@
       <!-- ENDIF -->
     </td>
     <td class="c_l">
-      <a href="messages.php?mode=write&id={buddy.BUDDY_USER_ID}"><img src="{dpath}img/m.gif" alt="{L_sys_writeMessage}" title="{L_sys_writeMessage}"></a>
+      <a href="messages.php?mode=write&id={buddy.BUDDY_USER_ID}"><img src="design/images/icon_mail.gif" alt="{L_sys_writeMessage}" title="{L_sys_writeMessage}"></a>
       <!-- IF ! (buddy.BUDDY_INCOMING && buddy.BUDDY_DENIED) -->
         <a href="buddy.php?mode=delete&buddy_id={buddy.BUDDY_ID}"><img src="design/images/r1.png" alt="{L_sys_delete}" title="{L_sys_delete}" border="0"></a>
       <!-- ENDIF -->
