--- a/design/templates/OpenGame/msg_message_list.tpl.html
+++ b/design/templates/OpenGame/msg_message_list.tpl.html
@@ -61,7 +61,7 @@
       <th>
         <!-- IF messages.FROM_ID -->
           <a href="messages.php?mode=write&id={messages.FROM_ID}&subject={L_msg_answer_prefix}{messages.SUBJ_SANITIZED}">
-            <img src="{dpath}img/m.gif" alt="{L_msg_answer}" border="0">
+            <img src="design/images/icon_mail.gif" alt="{L_msg_answer}" border="0">
           </a>
         <!-- ENDIF -->
         {messages.FROM}
