--- a/design/templates/OpenGame/note_list.tpl.html
+++ b/design/templates/OpenGame/note_list.tpl.html
@@ -72,7 +72,7 @@
   </td>
   <td class="c_c"><img src="design/images/icon_accept.png" onclick="note_validate({note.ID});">
     <!-- IF NOTE_ID_EDIT -->
-    <img src="design/images/icon_deny.png" data-note_id="0">
+    <br /><br /><br /><br /><img src="design/images/icon_deny.png" data-note_id="0">
     <!-- ENDIF --></td>
   <!-- ENDIF -->
 </tr>
