--- a/design/templates/OpenGame/stat_statistics.tpl.html
+++ b/design/templates/OpenGame/stat_statistics.tpl.html
@@ -46,7 +46,7 @@
       <th class ="c_c">{L_sys_player}</th>
       <th class ="c_c"><img src="{dpath}icons/menu_empire_emperor.png" border="0" alt="{L_stat_details}" title="{L_stat_details}" /></th>
       <!-- IF ! STATS_HIDE_PM_LINK -->
-        <th class ="c_c"><img src="{dpath}img/m.gif" border="0" alt="{L_stat_message_write}" title="{L_stat_message_write}" /></th>
+        <th class ="c_c"><img src="design/images/icon_mail.gif" border="0" alt="{L_stat_message_write}" title="{L_stat_message_write}" /></th>
       <!-- ENDIF -->
       <th class ="c_c">{L_sys_alliance}</th>
     <!-- ELSE -->
@@ -84,7 +84,7 @@
         <!-- IF ! STATS_HIDE_PM_LINK -->
         <td class="c_c">
           <a href="messages.php?mode=write&id={stat.ID}">
-            <img src="{dpath}img/m.gif" border="0" alt="{L_stat_message_write}" title="{L_stat_message_write}" />
+            <img src="design/images/icon_mail.gif" border="0" alt="{L_stat_message_write}" title="{L_stat_message_write}" />
           </a>
         </td>
         <!-- ENDIF -->
