--- a/design/templates/OpenGame/ali_members.tpl.html
+++ b/design/templates/OpenGame/ali_members.tpl.html
@@ -16,7 +16,7 @@
   <tr>
     <th>{L_Number}</th>
     <th><a href="alliance.php?mode={mode}&sort1=1&sort2={s}">{L_ali_sys_memberName}</a></th>
-    <th><img src="{dpath}img/m.gif" border=0 alt="{L_sys_write_message}"></th>
+    <th><img src="design/images/icon_mail.gif" border=0 alt="{L_sys_write_message}"></th>
     <th><a href="alliance.php?mode={mode}&sort1=0&sort2={s}">{L_ali_adm_rights_rank_name}</a></th>
     <th><a href="alliance.php?mode={mode}&sort1=2&sort2={s}">{L_ali_sys_points}</a></th>
     <th><a href="alliance.php?mode={mode}&sort1=3&sort2={s}">{L_sys_coordinates}</a></th>
@@ -31,7 +31,7 @@
     <tr>
       <th>{member.COUNT}</th>
       <th>{member.USER_NAME}</th>
-      <th><a href="messages.php?mode=write&id={member.USER_ID}"><img src="{dpath}img/m.gif" border=0 alt="{L_sys_write_message}"></a></th>
+      <th><a href="messages.php?mode=write&id={member.USER_ID}"><img src="design/images/icon_mail.gif" border=0 alt="{L_sys_write_message}"></a></th>
       <th>{member.RANK}</th>
       <th>{member.POINTS}</th>
       <th><a href="galaxy.php?mode=3&galaxy={member.GALAXY}&system={member.SYSTEM}">[{member.GALAXY}:{member.SYSTEM}:{member.PLANET}]</a></th>
