--- a/design/templates/OpenGame/search.tpl.html
+++ b/design/templates/OpenGame/search.tpl.html
@@ -45,7 +45,7 @@
     <tr class="c_l">
       <th>
         <img src="{dpath}icons/menu_empire_emperor.png" border="0" alt="{L_stat_details}" />
-        <!-- IF ! STATS_HIDE_PM_LINK --><img src="{dpath}img/m.gif" alt="{L_srch_action_pm}" title="{L_srch_action_pm}" /><!-- ENDIF -->
+        <!-- IF ! STATS_HIDE_PM_LINK --><img src="design/images/icon_mail.gif" alt="{L_srch_action_pm}" title="{L_srch_action_pm}" /><!-- ENDIF -->
         <img src="{dpath}img/b.gif" alt="{L_srch_action_buddy}" title="{L_srch_action_buddy}" border="0" />
         {L_srch_player_name}
       </th>
@@ -59,7 +59,7 @@
           <a href="index.php?page=imperator&int_user_id={search_result.PLAYER_ID}">
             <img src="{dpath}icons/menu_empire_emperor.png" border="0" alt="{L_stat_details}" />
           </a>
-          <!-- IF ! STATS_HIDE_PM_LINK --><a href="messages.php?mode=write&id={search_result.PLAYER_ID}"><img src="{dpath}img/m.gif" alt="{L_srch_action_pm}" title="{L_srch_action_pm}" /></a><!-- ENDIF -->
+          <!-- IF ! STATS_HIDE_PM_LINK --><a href="messages.php?mode=write&id={search_result.PLAYER_ID}"><img src="design/images/icon_mail.gif" alt="{L_srch_action_pm}" title="{L_srch_action_pm}" /></a><!-- ENDIF -->
           <a href="buddy.php?request_user_id={search_result.PLAYER_ID}" alt="{L_srch_action_buddy}"><img src="{dpath}img/b.gif" alt="{L_srch_action_buddy}" title="{L_srch_action_buddy}" border="0" /></a>
           {search_result.PLAYER_NAME}
           <!-- IF search_result.PLAYER_NAME != search_result.PLAYER_NAME_OLD -->
