UNI-fix-39b4.1: Fixed no player place in popup

--- a/design/templates/OpenGame/universe.tpl.html
+++ b/design/templates/OpenGame/universe.tpl.html
@@ -537,7 +537,7 @@ uni_row[{galaxyrow.PLANET_NUM}] =
         </td>
         <td class="c_c">
           <button onclick="sn_redirect('stat.php?who=1&range=[USER_RANK]#[USER_RANK]');">
-            {L_gl_stats}: {L_Place} {galaxyrow.USER_RANK}/{userCount}
+            {L_gl_stats}: {L_Place} [USER_RANK]/{userCount}
           </button>
           <br />
           <button onclick="sn_redirect('index.php?page=imperator&int_user_id=[USER_ID]');">
