--- a/design/templates/OpenGame/options.tpl.html
+++ b/design/templates/OpenGame/options.tpl.html
@@ -131,7 +131,7 @@
             {L_opt_time_diff_explain}<br/>
             <input name="user_time_diff_forced" type="checkbox" id="user_time_diff_forced" value="1" <!-- IF user_time_diff_forced --> checked="checked" <!-- ENDIF --> />
             <label for="user_time_diff_forced">{L_opt_time_diff_manual}</label>
-            <input name="user_time_diff" type="text" id="user_time_diff" value="{user_time_diff}" style="width: 60px;"/> {L_sys_sec}<br/>
+            <input name="user_time_diff" type="text" id="user_time_diff" value="{D_SN_CLIENT_TIME_DIFF}" style="width: 60px;" /> {L_sys_sec}<br/>
           </td>
         </tr>
         <!-- IF ! USER_VACATION_DISABLE -->
